minor styling changes

--- a/src/components/Lobby/Lobby.scss
+++ b/src/components/Lobby/Lobby.scss
@@ -20,6 +20,7 @@
       border: 2px solid $secondary-border;
       border-radius: 8px;
       text-align: center;
+      text-transform: uppercase;
     }
   }
 
