--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,17 +1,12 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 8px 0;
-  padding-top: 16px;
-  min-width: 320px;
-  max-width: 450px;
-  flex-grow: 1;
-
-  &__label {
+.home-page {
+  &__container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 4px 0;
+  }
+
+  &__input {
+    text-transform: uppercase;
   }
 }
