--- a/src/pages/JoinRoomPage/JoinRoomPage.scss
+++ b/src/pages/JoinRoomPage/JoinRoomPage.scss
@@ -2,8 +2,27 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
   &__header {
     padding: 8px 0;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+  }
+
+  &__span {
+    padding: 8px 0;
+    line-height: 2rem;
+    font-weight: 300;
+    font-style: italic;
+  }
+
+  &__input {
+    text-transform: uppercase;
   }
 
   &__footer {
