add functionality to get room users on game page

--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -22,4 +22,9 @@
     }
     // TODO - set chosen item (answer) to background-color: $secondary-background; and scale up a tad
   }
+
+  &__footer {
+    position: fixed;
+    bottom: 16px;
+  }
 }
